--- a/style.css
+++ b/style.css
@@ -1,14 +1,59 @@
 body {
   margin: 0;
-  display: flex;
+  /*display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center;*/
   background-color: lightgreen;
-  height: 100vh;
+  /*height: 100vh;*/
 }
 
 h1 {
   color: seagreen;
   margin: 0;
   font: 3rem sans-serif;
+}
+
+.box {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  padding: 20px;
+  align-items: stretch;
+}
+
+.block {
+  border: 1px solid;
+  min-height: 50px;
+  border-radius: 8px;
+  width: 50px;
+}
+
+.block1 {
+  background-color: cornflowerblue;
+  /* grid-column-start: 2;
+  grid-row-start: 3;
+  grid-column-end: ;*
+  */
+  grid-column-start: 1;
+  grid-column-end: 5;
+  /*grid-column: 1/5;*/
+  width: 100%;
+}
+
+.block2 {
+  background-color: crimson;
+  grid-row-start: 7;
+  grid-column-end: span 4;
+  width: 100%;
+}
+
+.block3 {
+  background-color: bisque;
+  grid-row-end: span 5;
+  width: 100%;
+}
+
+.block9 {
+  background-color: seagreen;
+  justify-self: flex-end;
 }
